helm/4-section/hello-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-app
  name: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  strategy: {}
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - image: kicbase/echo-server:1.0
        name: echo-server
        resources: {}
status: {}
