helm/4-section/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-app
  name: hello-clusterip
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-app
status:
  loadBalancer: {}
