helm/4-section/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx-clusterip
            port:
              number: 80
        path: /nginx
        pathType: Prefix
      - backend:
          service:
            name: hello-clusterip
            port:
              number: 80
        path: /hello
        pathType: Prefix
status:
  loadBalancer: {}
